create cpp example circular_buffer

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,11 +1,11 @@
 services:
-  tirrex:
+  app:
     build:
       context: ./
       network: host
     image: nvim_blink
+    network_mode: host
     volumes:
       - ./config:/root/.config/nvim
       - ./examples:/root/examples
-    command: nvim
-
+    command: sleep infinity
