--- a/compose.yaml
+++ b/compose.yaml
@@ -5,6 +5,7 @@ services:
       network: host
     image: nvim_blink
     network_mode: host
+    stop_signal: SIGINT
     volumes:
       - ./config:/root/.config/nvim
       - ./examples:/root/examples
